--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,6 +1,6 @@
 {	
 "name": "MicrosoftTeams",
-"description": "A Simple Theme Based On The New Windows 11! With Rounded Edges To Every Element Matching In Colour With Dark/Light Mode Variations & Border Radius'",
+"description": "BETA - MS TEAMS THEME",
 "version": "0.0.1",
 "author": "Leeprky#2063",
 "license": "MIT",
