--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,7 +1,7 @@
 {	
 "name": "MicrosoftTeams",
-"description": "BETA - MS TEAMS THEME",
-"version": "0.0.7",
+"description": "ALPHA - MS TEAMS THEME",
+"version": "0.0.8",
 "author": "Leeprky#2063",
 "license": "MIT",
 "theme": "MicrosoftTeams-config.css",
